--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
   <script src="angular-ui-router/release/angular-ui-router.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services/service.js"></script>
+  <script src="js/services/apiService.js"></script>
   <script src="js/controllers/mainController.js"></script>
   <script src="js/directives/addContact.js"></script>
 
