--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,14 @@
 
   <div ng-controller="brotherCtrl">
     <div class="container">
+      <div class="page-header"></div>
       <div class="row">
           <div class="col-md-6 col-md-offset-3">
-          <h1 class="text-center">brother controller</h1>
-
+          <h1 class="text-center">Notes</h1>
+          <p>this is the brother of main controller, whats written in the input above will be reflected here</p>
           <div>{{text}}</div>
       </div>
+    </div>
     </div>
   </div>
 
