--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
   <ui-view></ui-view>
 
   <div ng-controller="brotherCtrl">
-    <div class="container">
+    <div class="container ">
       <div class="page-header"></div>
       <div class="row">
           <div class="col-md-6 col-md-offset-3">
@@ -56,6 +56,9 @@
 
 
 </div> <!-- end of container -->
+<footer>
+  <div class="page-header"></div>
+</footer>
 
    <script src="angular/angular.js"></script>
    <script src="@uirouter/core/_bundles/ui-router-core.js"></script>
