--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <div class="navbar-header">
       <ul class="navbar-nav">
         <li class="nav-item active">
-            <a class="navbar-brand" ui-sref="home ">GotYa!</a>
+            <a class="navbar-brand" ui-sref="contacts ">GotYa!</a>
         </li>
         <!-- <li class="nav-item ">
             <a class="navbar-brand nav-link" ui-sref="products" ui-sref-active="active">Contacts</a>
@@ -41,7 +41,7 @@
 
   <ui-view></ui-view>
 
-  <div ng-controller="brotherCtrl">
+  <!-- <div ng-controller="brotherCtrl">
     <div class="container ">
       <div class="page-header"></div>
       <div class="row">
@@ -52,13 +52,13 @@
       </div>
     </div>
     </div>
-  </div>
+  </div> -->
 
 
 </div> <!-- end of container -->
-<footer>
+<!-- <footer>
   <div class="page-header"></div>
-</footer>
+</footer> -->
 
    <script src="angular/angular.js"></script>
    <script src="@uirouter/core/_bundles/ui-router-core.js"></script>
