--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,6 @@
   <div class="row">
       <div class="col-md-6 col-md-offset-3">
         <h1 class="text-center">Contact List</h1>
-        <p>{{text}}</p>
       </div>
   </div>
 
@@ -72,6 +71,7 @@
   <script src="js/controllers/contactController.js"></script>
   <script src="js/controllers/brotherController.js"></script>
   <script src="js/directives/addContact.js"></script>
+  <script src="js/directives/contactProfile.js"></script>
 
 </body>
 </html>
