--- a/public/index.html
+++ b/public/index.html
@@ -33,14 +33,14 @@
   </div>
 
 
-  <!-- <div class="container" ng-controller="listContactsCtrl">
+  <div class="container" ng-controller="listContactsCtrl">
 
- </div>  -->
+ </div>
  <!-- end of container -->
 
   <ui-view></ui-view>
 
-  <!-- <div ng-controller="brotherCtrl">
+  <div ng-controller="brotherCtrl">
     <div class="container ">
       <div class="page-header"></div>
       <div class="row">
@@ -51,13 +51,13 @@
       </div>
     </div>
     </div>
-  </div> -->
+  </div>
 
 
 </div> <!-- end of container -->
-<!-- <footer>
+<footer>
   <div class="page-header"></div>
-</footer> -->
+</footer>
 
    <script src="angular/angular.js"></script>
    <script src="@uirouter/core/_bundles/ui-router-core.js"></script>
@@ -71,7 +71,7 @@
   <script src="js/controllers/contactController.js"></script>
   <script src="js/controllers/brotherController.js"></script>
   <script src="js/directives/addContact.js"></script>
-  <script src="js/directives/contactProfile.js"></script>
+  <script src="js/directives/contactsSummary.js"></script>
 
 </body>
 </html>
